--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,4 +3,8 @@ version: '${project.version}'
 main: com.articreep.frostboats.FrostBoats
 api-version: 1.18
 authors: [ Arti_Creep ]
-description: Boats, but with Frost Walker so you can boat over lakes of ice instead of water.
+description: Boats, but with Frost Walker, so you can boat over lakes of ice instead of water.
+commands:
+  reloadfrostboats:
+    description: Reloads recipes and config values.
+    usage: /reloadfrostboats
