Add config value to change frost walker level on recipe

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,9 @@
 # Controls the durability that new FrostBoats start with. Defaults to 1000.
 # Set to -1 for infinite durability.
 durability: 1000
+# Controls the level of Frost Walker when a boat is crafted using the recipe.
+# Defaults to 2 if an invalid number is provided (below 1 or above 255)
+frostwalkerrecipelevel: 2
 # The radius of ice generated when using a FrostBoat is capped at a radius of 14.9.
 # If you would like to uncap this set this to true!
 uncapradius: false
