Add permission for reload command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,4 @@ commands:
   reloadfrostboats:
     description: Reloads recipes and config values.
     usage: /reloadfrostboats
+    permission: frostboats.reload
