Various changes: - Changed how the plugin deals with 0 default durability - Infinite frost boats now use the ∞ symbol - Added config value to hide lore on infinite FrostBoats

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,6 +14,8 @@ baseanvilcost: 12
 # Controls the level of Frost Walker when a boat is crafted using the recipe.
 # Defaults to 2 if an invalid number is provided (below 1 or above 255)
 frostwalkerrecipelevel: 2
+# Hides the durability lore and actionbar when using infinite durability FrostBoats. Defaults to false.
+hideinfinitelore: false
 # The radius of ice generated when using a FrostBoat is capped at a radius of 14.9.
 # If you would like to uncap this set this to true!
 uncapradius: false
